# rustfi-hackathon

./: LICENSE  README.MD
tracy/: Cargo.toml  build.rs  denom_traces.json  juno_assets.json  juno_pools.json  osmosis_pools.json  osmosis_pools_hackathon.json
tracy-cli/: Cargo.toml  graph.dot  osmosis_pools_hackathon.json  outfile.ps
tracy-cli/src/: main.rs
tracy-web/: package.json
tracy-web/pages/: index.tsx
tracy-web/src/: types.ts
tracy-web/src/components/: Footer.tsx  Header.tsx  Pools.tsx
tracy-web/src/hooks/: usePool.tsx  usePools.tsx  useQuote.tsx
tracy-web/src/pages/: _app.tsx  index.tsx  pools.tsx  swap.tsx
tracy-web/src/state/: menu.ts
tracy-web/src/styles/: Home.module.css  globals.css
tracy/src/: dex.rs  juno_pool.rs  lib.rs  main.rs  pools.rs  server.rs
tracy/src/pools/: juno_pool.rs  mod.rs  osmosis_pool.rs
tracy/src/server/: handler.rs  routes.rs  server.rs
tracy/src/util/: denom_trace.rs  mod.rs
tracy/src/util/proto/: mod.rs  osmosis_gamm_v1beta1.rs
