[package]
name = "tracy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
async-trait = "0.1.57"
dyn-clone = "1.0.9"
eyre = "0.6.8"
prost = "0.11.0"
prost-types = "0.11.1"
reqwest = {version = "0.11.12", features = ["json"]}
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
tonic = "0.8.2"
warp = "0.3.3"

[build-dependencies]
tonic-build = "0.8.2"

[lib]
crate-type = ["lib"]
bench = false

[[bin]]
bench = false
path = "src/server/server.rs"
name = "server"

[[bin]]
bench = false
path = "src/main.rs"
name = "playground"